隐藏美国分布点

--- a/aboutus.html
+++ b/aboutus.html
@@ -588,7 +588,10 @@
             <!-- 小结束 -->
             <div class="map">
               <div class="map-box-img-smaill">
-                <img src="./img/abo/map-ico/smill/map.png" alt="">
+                <!----2020-7-6隐藏原本美国分布图 替换新图-->
+                <!-- <img src="./img/abo/map-ico/smill/map.png" alt=""> -->
+                <!---end-->
+                <img src="./img/abo/map-ico/smill/aboutus_map.gif" alt="">
 
               </div>
               <div class="map_box">
