--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <title>Document</title>
   <meta name="description" content="产品1这是产品描述" />
   <meta name="keywords" content="力同产品，力同产品，" />
-  
+
+  <link rel="shortcut icon" href="./favicon.ico" />
+  <link rel="bookmark"href="./favicon.ico" />
+
   <link rel="stylesheet" href="./css/public.css">
   <link rel="stylesheet" href="./css/com/header.css">
   <link rel="stylesheet" href="./css/com/footer.css">
@@ -636,11 +639,11 @@
           <div class="cooperation_left">
            <a href=""><img src="img/foot_logo@2x.png" alt=""></a> 
             <div>
-              <span><a href="./component/aboutus.html">关于我们</a></span>
-              <span><a href="./component/service.html?tab=2">联系我们</a></span>
-              <span><a href="./component/explore.html?tab=0">新闻中心</a></span>
-              <span><a href="./component/explore.html?tab=1">精彩活动</a></span>
-              <span><a href="./component/explore.html?tab=3">招聘中心</a></span>
+              <span><a href="./aboutus.html">关于我们</a></span>
+              <span><a href="./service.html?tab=2">联系我们</a></span>
+              <span><a href="./explore.html?tab=0">新闻中心</a></span>
+              <span><a href="./explore.html?tab=1">精彩活动</a></span>
+              <span><a href="./explore.html?tab=3">招聘中心</a></span>
             </div>
           </div>
           <div class="cooperation_right">
